--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>Under construction: Now cooks pancake...</title>
 </head>
 <body>
-<p>Old site: https://osdn.net/users/megumi_engines/</p>
+<p>Currently projects (非公開、招待制): https://github.com/thundervox/bento</p>
 </body>
 </html>
