--- a/081/yabasic/yabasic-textra.html
+++ b/081/yabasic/yabasic-textra.html
@@ -172,71 +172,71 @@
           </span>
         </dt><dd><dl><dt>
           <span class="section">
-            <a href="#ref_a">Aキー</a>
+            <a href="#ref_a">A</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_b">Bさん</a>
+            <a href="#ref_b">B</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_c">Cキー</a>
+            <a href="#ref_c">C</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_d">Dキー</a>
+            <a href="#ref_d">D</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_e">Eキー</a>
+            <a href="#ref_e">E</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_f">Fキー</a>
+            <a href="#ref_f">F</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_g">Gキー</a>
+            <a href="#ref_g">G</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_h">Hキー</a>
+            <a href="#ref_h">H</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_i">I型</a>
+            <a href="#ref_i">I</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_l">L型</a>
+            <a href="#ref_l">L</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_m">Mキー</a>
+            <a href="#ref_m">M</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_n">N個</a>
+            <a href="#ref_n">N</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_o">O(オー)</a>
+            <a href="#ref_o">O</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_p">Pキー</a>
+            <a href="#ref_p">P</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_r">Rキー</a>
+            <a href="#ref_r">R</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_s">Sキー</a>
+            <a href="#ref_s">S</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_t">Tキー</a>
+            <a href="#ref_t">T</a>
           </span>
         </dt><dt>
           <span class="section">
@@ -244,15 +244,15 @@
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_v">Vキー</a>
+            <a href="#ref_v">V</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_w">Wキー</a>
+            <a href="#ref_w">W</a>
           </span>
         </dt><dt>
           <span class="section">
-            <a href="#ref_x">X軸</a>
+            <a href="#ref_x">X</a>
           </span>
         </dt><dt>
           <span class="section">
