--- a/081/tmbasic/html/index.html
+++ b/081/tmbasic/html/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>TMBASICプログラム言語</title>
+<title>TMBASIC プログラミング言語</title>
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -90,7 +90,7 @@ ul { padding-left: 5mm; }
             <span id="docLabelLong">マニュアル</span>
             <span id="docLabelShort">ドキュメント</span>
           </a>
-          <a href="https://github.com/electroly/tmbasic">ギットハブ</a>
+          <a href="https://github.com/electroly/tmbasic">GitHub</a>
         </div></div>
 </nav>
 <div id="root">
@@ -134,52 +134,52 @@ ul { padding-left: 5mm; }
 </div>
 <h3 id="easy-to-share">共有が容易</h3>
 <div class="indent">
-<p>TMBASICアプリは、外部ライブラリファイルを必要としないスタンドアロンの実行可能ファイルです。インストールせずにコピーして開くことができます。TMBASIC缶<a href="https://en.wikipedia.org/wiki/Cross_compiler">クロスコンパイル</a>Windows、macOS、Linuxを対象としたネイティブ実行可能ファイル。</p>
+<p>TMBASICアプリは、外部ライブラリファイルを必要としないスタンドアロンの実行可能ファイルです。インストールせずにコピーして開くことができます。TMBASIC は <a href="https://en.wikipedia.org/wiki/Cross_compiler">クロスコンパイル</a>Windows、macOS、Linuxを対象としたネイティブ実行可能ファイル。</p>
 </div>
 <h2 id="compatibility">互換性</h2>
 <div id="compatibilityTable">
 <table>
 <tr>
 <td>
-          <strong>ウィンドウ(Windows)</strong>
+          <strong>Windows</strong>
           <br>
           <small>
-            <nobr>Vista以降</nobr>
+            <nobr>Vista 以降</nobr>
           </small>
         </td>
 <td><nobr>64ビット</nobr>•<nobr>32ビット</nobr></td>
 </tr>
 <tr>
 <td>
-          <strong>macOS版</strong>
+          <strong>macOS</strong>
           <br>
           <small>
-            <nobr>10.13以降</nobr>
+            <nobr> 10.13 以降</nobr>
           </small>
         </td>
-<td>インテル•Apple Silicon</td>
+<td>Intel • Apple Silicon</td>
 </tr>
 <tr>
 <td>
-          <strong>リナックス</strong>
+          <strong>Linux</strong>
           <br>
           <small>
-            <nobr>2.6.39以降</nobr>
+            <nobr> 2.6.39 以降</nobr>
           </small>
         </td>
 <td><nobr>64ビット</nobr>•<nobr>32ビット</nobr>・アーム64・アーム32</td>
 </tr>
 <tr>
 <td>
-          <strong>アイオーエス</strong>
+          <strong>iOS</strong>
         </td>
-<td><a href="https://apps.apple.com/us/app/ish-shell/id1436902243">iSHシェル</a>(Linuxの場合)<nobr>32ビット</nobr>)をクリックし</td>
+<td><a href="https://apps.apple.com/us/app/ish-shell/id1436902243">iSH Shell</a> (Linuxの場合)<nobr>32ビット</nobr>)をクリックし</td>
 </tr>
 <tr>
 <td>
-          <strong>アンドロイド</strong>
+          <strong>Android</strong>
         </td>
-<td><a href="https://termux.com/">Termux</a>(Linux ARM64の場合)</td>
+<td><a href="https://termux.com/">Termux</a> (Linux ARM64 の場合)</td>
 </tr>
 </table>
 </div>
