--- a/081/tmbasic/html/index.html
+++ b/081/tmbasic/html/index.html
@@ -85,7 +85,7 @@ ul { padding-left: 5mm; }
 <body>
 <nav>
 <div><div>
-          <a href="/" style="font-weight: 600;">TMBASIC</a>
+          <a href="./" style="font-weight: 600;">TMBASIC</a>
           <a href="doc.html">
             <span id="docLabelLong">マニュアル</span>
             <span id="docLabelShort">ドキュメント</span>
@@ -97,8 +97,8 @@ ul { padding-left: 5mm; }
 <h1 id="tmbasic">TMBASIC</h1>
 <!-- See DEVELOPERS.md for instructions on generating this screenshot. -->
 <p>
-          <a href="/screenshot.png">
-            <img src="/screenshot.png" alt="スクリーンショット" class="screenshot" width="500">
+          <a href="screenshot.png">
+            <img src="screenshot.png" alt="スクリーンショット" class="screenshot" width="500">
           </a>
         </p>
 <p><strong>TMBASICは<a href="https://en.wikipedia.org/wiki/Programming_language">プログラム言語</a>書き込み用<a href="https://en.wikipedia.org/wiki/Console_application">コンソールプログラム</a></strong>シンプルなコマンドラインツールから洗練されたマウス駆動のユーザーインターフェイスまで、BASIC言語は初心者にも使いやすく、経験豊富なプログラマーにとっては親しみやすく使いやすい言語です。</p>
@@ -106,9 +106,9 @@ ul { padding-left: 5mm; }
           <strong>TMBASICは開発中です。お楽しみに!</strong>
         </p>
 <p>
-          <a href="/doc.html">📄文書</a>
+          <a href="doc.html">📄文書</a>
           <br>
-          <a href="/cheat.html">経験豊富なプログラマのための📄カンニングペーパー</a>
+          <a href="cheat.html">経験豊富なプログラマのための📄カンニングペーパー</a>
         </p>
 <h2 id="what-can-i-make-with-tmbasic">TMBASICで何が作れるんですか?</h2>
 <h3 id="command-line-interfaces-clis">コマンドラインインターフェイス(CLI)</h3>
@@ -173,7 +173,7 @@ ul { padding-left: 5mm; }
 <td>
           <strong>iOS</strong>
         </td>
-<td><a href="https://apps.apple.com/us/app/ish-shell/id1436902243">iSH Shell</a> (Linuxの場合)<nobr>32ビット</nobr>)をクリックし</td>
+<td><a href="https://apps.apple.com/us/app/ish-shell/id1436902243">iSH Shell</a> (Linuxの場合)<nobr>32ビット</nobr>)</td>
 </tr>
 <tr>
 <td>
