--- a/081/tmbasic/html/index.html
+++ b/081/tmbasic/html/index.html
@@ -101,7 +101,7 @@ ul { padding-left: 5mm; }
             <img src="screenshot.png" alt="スクリーンショット" class="screenshot" width="500">
           </a>
         </p>
-<p><strong>TMBASICは<a href="https://en.wikipedia.org/wiki/Programming_language">プログラム言語</a>書き込み用<a href="https://en.wikipedia.org/wiki/Console_application">コンソールプログラム</a></strong>シンプルなコマンドラインツールから洗練されたマウス駆動のユーザーインターフェイスまで、BASIC言語は初心者にも使いやすく、経験豊富なプログラマーにとっては親しみやすく使いやすい言語です。</p>
+<p><strong>TMBASICは<a href="https://en.wikipedia.org/wiki/Programming_language">プログラム言語</a>書き込み用<a href="https://en.wikipedia.org/wiki/Console_application">コンソールプログラム</a></strong>シンプルなコマンドラインツールから洗練されたマウス駆動のユーザーインターフェイスまで。BASIC言語は初心者にも使いやすく、経験豊富なプログラマーにとっては親しみやすく使いやすいです。</p>
 <p>
           <strong>TMBASICは開発中です。お楽しみに!</strong>
         </p>
