--- a/081/tmbasic/html/index.html
+++ b/081/tmbasic/html/index.html
@@ -101,14 +101,16 @@ ul { padding-left: 5mm; }
             <img src="screenshot.png" alt="スクリーンショット" class="screenshot" width="500">
           </a>
         </p>
-<p><strong>TMBASICは<a href="https://en.wikipedia.org/wiki/Programming_language">プログラム言語</a>書き込み用<a href="https://en.wikipedia.org/wiki/Console_application">コンソールプログラム</a></strong>シンプルなコマンドラインツールから洗練されたマウス駆動のユーザーインターフェイスまで。BASIC言語は初心者にも使いやすく、経験豊富なプログラマーにとっては親しみやすく使いやすいです。</p>
+<p><strong>TMBASIC はシンプルなコマンドラインツールから洗練されたマウス駆動のユーザーインターフェイスまでの<a href="https://e-words.jp/w/%E3%82%B3%E3%83%B3%E3%82%BD%E3%83%BC%E3%83%AB%E3%82%A2%E3%83%97%E3%83%AA%E3%82%B1%E3%83%BC%E3%82%B7%E3%83%A7%E3%83%B3.html">コンソールプログラム</a>を開発するための<a href="https://ja.wikipedia.org/wiki/%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0%E8%A8%80%E8%AA%9E">プログラミング言語</a>です。</strong>
+
+BASIC言語は初心者にも使いやすく、経験豊富なプログラマーにとっては親しみやすく使いやすいです。</p>
 <p>
           <strong>TMBASICは開発中です。お楽しみに!</strong>
         </p>
 <p>
           <a href="doc.html">📄文書</a>
           <br>
-          <a href="cheat.html">経験豊富なプログラマのための📄カンニングペーパー</a>
+          <a href="cheat.html">経験豊富なプログラマのための📄チートシート</a>
         </p>
 <h2 id="what-can-i-make-with-tmbasic">TMBASICで何が作れるんですか?</h2>
 <h3 id="command-line-interfaces-clis">コマンドラインインターフェイス(CLI)</h3>
