--- a/081/tmbasic/html/index.html
+++ b/081/tmbasic/html/index.html
@@ -108,14 +108,14 @@ BASIC言語は初心者にも使いやすく、経験豊富なプログラマー
           <strong>TMBASICは開発中です。お楽しみに!</strong>
         </p>
 <p>
-          <a href="doc.html">📄文書</a>
+          <a href="doc.html">📄ドキュメント</a>
           <br>
-          <a href="cheat.html">経験豊富なプログラマのための📄チートシート</a>
+          <a href="cheat.html">📄経験豊富なプログラマのためのチートシート</a>
         </p>
 <h2 id="what-can-i-make-with-tmbasic">TMBASICで何が作れるんですか?</h2>
 <h3 id="command-line-interfaces-clis">コマンドラインインターフェイス(CLI)</h3>
 <div class="indent">
-<p>最も単純なタイプのプログラムです。キーボードからの読み取り入力または<a href="https://en.wikipedia.org/wiki/Command-line_interface#Arguments">シェル引数</a>テキストの行を出力として印刷します。例としては、次のような開発者ツールがあります。<a href="https://en.wikipedia.org/wiki/Git">ギット</a>および<a href="https://en.wikipedia.org/wiki/Interactive_fiction">インタラクティブフィクション</a>次のようなゲーム<a href="https://en.wikipedia.org/wiki/Zork">ゾーク</a>ボタンをクリックし</p>
+<p>最も単純なタイプのプログラムです。キーボードからの読み取り入力または<a href="https://en.wikipedia.org/wiki/Command-line_interface#Arguments">シェル引数</a>テキストの行を出力として印刷します。例としては、次のような開発者ツールがあります。<a href="https://en.wikipedia.org/wiki/Git">Git</a>および<a href="https://en.wikipedia.org/wiki/Interactive_fiction">インタラクティブフィクション</a>次のようなゲーム<a href="https://en.wikipedia.org/wiki/Zork">Zork</a>ボタンのクリック</p>
 </div>
 <h3 id="text-based-user-interfaces-tuis">テキストベースのユーザーインターフェイス(TUI)</h3>
 <div class="indent">
@@ -123,7 +123,7 @@ BASIC言語は初心者にも使いやすく、経験豊富なプログラマー
 </div>
 <h3 id="text-mode-games">テキストモードのゲーム</h3>
 <div class="indent">
-<p>空白の画面から始めて、独自のプログラム要素を最初から描画します。ボックス描画文字やその他のUnicode記号を使用して、基本的なグラフィックを作成します。<a href="https://en.wikipedia.org/wiki/NetHack">ネットハック</a>および<a href="https://en.wikipedia.org/wiki/ZZT">ザッ</a>テキストモードのゲームの例です</p>
+<p>空白の画面から始めて、独自のプログラム要素を最初から描画します。ボックス描画文字やその他の Unicode 記号を使用して、基本的なグラフィックを作成します。<a href="https://en.wikipedia.org/wiki/NetHack">ネットハック</a>および<a href="https://en.wikipedia.org/wiki/ZZT">ザッ</a>テキストモードのゲームの例です</p>
 </div>
 <h2 id="its-easy">簡単!</h2>
 <h3 id="easy-to-get-started">導入が容易</h3>
@@ -132,11 +132,11 @@ BASIC言語は初心者にも使いやすく、経験豊富なプログラマー
 </div>
 <h3 id="easy-to-write">書きやすい</h3>
 <div class="indent">
-<p>高品質の最新GUIを開発するには、プロフェッショナルレベルの専門知識が必要です。テキストベースのアプリには視覚効果のオプションがほとんどなく、初心者でも質の高い結果を得ることができます。</p>
+<p>高品質の最新 GUI を開発するには、プロフェッショナルレベルの専門知識が必要です。テキストベースのアプリには視覚効果のオプションがほとんどなく、初心者でも質の高い結果を得ることができます。</p>
 </div>
 <h3 id="easy-to-share">共有が容易</h3>
 <div class="indent">
-<p>TMBASICアプリは、外部ライブラリファイルを必要としないスタンドアロンの実行可能ファイルです。インストールせずにコピーして開くことができます。TMBASIC は <a href="https://en.wikipedia.org/wiki/Cross_compiler">クロスコンパイル</a>Windows、macOS、Linuxを対象としたネイティブ実行可能ファイル。</p>
+<p>TMBASIC アプリは、外部ライブラリファイルを必要としないスタンドアロンの実行可能ファイルです。インストールせずにコピーして開くことができます。TMBASIC は <a href="https://en.wikipedia.org/wiki/Cross_compiler">クロスコンパイル</a>Windows, macOS, Linux を対象としたネイティブ実行可能ファイル。</p>
 </div>
 <h2 id="compatibility">互換性</h2>
 <div id="compatibilityTable">
