--- a/081/tmbasic/html/doc.html
+++ b/081/tmbasic/html/doc.html
@@ -114,7 +114,7 @@ ul { padding-left: 5mm; }
 <a href="type_record.html"><span class="tt">Record</span></a> •
 <a href="type_string.html"><span class="tt">String</span></a> •
 <a href="type_timespan.html"><span class="tt">TimeSpan</span></a> •
-<a href="type_timezone.html"><span class="tt">TimeZone</span></a></li><li><a href="ref_constants.html">定数</a></li><li><a href="ref_grammar.html">言語文法</a></li></ul><h2>付録</h2><ul><li><a href="cheat.html">虎の巻 (経験者向け)</a></li><li><a href="colors.html">配色の対応可能</a></li><li><a href="license.html">ライセンス</a></li></ul>
+<a href="type_timezone.html"><span class="tt">TimeZone</span></a></li><li><a href="ref_constants.html">定数</a></li><li><a href="ref_grammar.html">言語文法</a></li></ul><h2>付録</h2><ul><li><a href="cheat.html">虎の巻 (経験者向け)</a></li><li><a href="colors.html">配色の対応状況</a></li><li><a href="license.html">ライセンス</a></li></ul>
 </div>
 </body>
 </html>
