--- a/081/tmbasic/html/doc.html
+++ b/081/tmbasic/html/doc.html
@@ -84,7 +84,7 @@ ul { padding-left: 5mm; }
 </head>
 <body>
 <nav>
-<div><div><a href="/" style="font-weight: 600;">TMBASIC</a><a href="doc.html"><span id="docLabelLong">取扱説明書</span><span id="docLabelShort">取扱説明書</span></a><a href="https://github.com/electroly/tmbasic">GitHub</a></div></div>
+<div><div><a href="index.html" style="font-weight: 600;">TMBASIC</a><a href="doc.html"><span id="docLabelLong">取扱説明書</span><span id="docLabelShort">取扱説明書</span></a><a href="https://github.com/electroly/tmbasic">GitHub</a></div></div>
 </nav>
 <div id="root">
 <h1>TMBASIC 取扱説明書</h1><h2>プログラミングリファレンス</h2><ul><li>ステートメント:
