--- a/081/gtk-server/textra/gtk-server.1.html
+++ b/081/gtk-server/textra/gtk-server.1.html
@@ -1,4 +1,4 @@
-コンテンツタイプ:text/html;charset=UTF-8<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <HTML><HEAD><meta http-equiv="Content-Type" content="text/html; charset=utf8"><TITLE>gtk-serverのマニュアルページ</TITLE>
 </HEAD><BODY>
 <H1>gtk-サーバ</H1>セクション:ユーザーコマンド(1)<BR><A HREF="#index">索引</A><A HREF="/cgi-bin/man/man2html">メインコンテンツに戻る</A><HR>
